feat: refactor user profile retrieval and enhance error handling in authentication